# race_vision

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
human_vision/: mypy.ini
human_vision/src/human_vision/: __init__.py  vision.py
human_vision/src/human_vision/backends/: __init__.py  mediapipe_backend.py
human_vision/src/human_vision/concurrency/: __init__.py  scheduler.py
human_vision/src/human_vision/core/: contracts.py  lifecycle.py  types.py
human_vision/src/human_vision/pipeline/: __init__.py  runner.py  stages.py
human_vision/src/human_vision/utils/: image.py  optional_imports.py
human_vision/src/numpy/: __init__.py
human_vision/src/platformdirs/: __init__.py
human_vision/src/pydantic/: __init__.py
human_vision/tests/: test_vision_smoke.py
src/human_vision/: cli.py  config.py  logging.py  results.py
src/human_vision/backends/: base.py  onnx_backend.py  tflite_backend.py
src/human_vision/concurrency/: multiprocess.py  shared_memory.py  threaded.py
src/human_vision/core/: errors.py  telemetry.py
src/human_vision/models/: __init__.py  registry.py  specs_builtin.py  store.py  sync.py
src/human_vision/pipeline/: frame_diff.py  smoother.py
src/human_vision/utils/: __init__.py  geometry.py
src/requests/: __init__.py
tests/: test_registry.py  test_scheduler_multiprocess_fake.py  test_scheduler_threaded.py  test_store_sync.py
